--- a/演示/demo/use_gulp/index.html
+++ b/演示/demo/use_gulp/index.html
@@ -8,13 +8,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html>
 	<head>
 		<title>Umbrella Bootstarp Website Template | Home :: w3layouts</title>
-		<link href="src/css/bootstrap.css" rel='stylesheet' type='text/css' />
-		<link rel="shortcut icon" href="src/images/fav.png" />	
+		<link href="dist/css/bootstrap.css" rel='stylesheet' type='text/css' />
+		<link href="dist/css/min.css" rel='stylesheet' type='text/css' />
+		<link rel="shortcut icon" href="dist/images/fav.png" />	
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-		<script src="src/js/jquery.min.js"></script>
+		<script src="dist/js/jquery.min.js"></script>
 		 <!---- start-smoth-scrolling---->
-		<script type="text/javascript" src="src/js/move-top.js"></script>
-		<script type="text/javascript" src="src/js/easing.js"></script>
+		<script type="text/javascript" src="dist/js/move-top.js"></script>
+		<script type="text/javascript" src="dist/js/easing.js"></script>
 		<script type="text/javascript">
 			jQuery(document).ready(function($) {
 				$(".scroll").click(function(event){		
@@ -24,7 +25,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			});
 		</script>
 		 <!-- Custom Theme files -->
-		<link href="src/css/style.css" rel='stylesheet' type='text/css' />
+		<link href="dist/css/style.css" rel='stylesheet' type='text/css' />
    		 <!-- Custom Theme files -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
@@ -61,7 +62,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="container">
 					<div class="top-header">
 						<div class="logo">
-							<a href="#"><img src="src/images/logo.png" title="logo" /></a>
+							<a href="#"><img src="dist/images/logo.png" title="logo" /></a>
 						</div>
 						<!----start-top-nav---->
 						 <nav class="top-nav">
@@ -72,7 +73,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<li class="page-scroll"><a href="#about" class="scroll">About </a></li>
 								<li class="contatct-active" class="page-scroll"><a href="#contact" class="scroll">Contact</a></li>
 							</ul>
-							<a href="#" id="pull"><img src="src/images/nav-icon.png" title="menu" /></a>
+							<a href="#" id="pull"><img src="dist/images/nav-icon.png" title="menu" /></a>
 						</nav>
 						<div class="clearfix"> </div>
 					</div>
@@ -81,7 +82,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<!----- //End-header---->
 			<!----- start-slider---->
 			<!----start-slider-script---->
-			<script src="src/js/responsiveslides.min.js"></script>
+			<script src="dist/js/responsiveslides.min.js"></script>
 			 <script>
 			    // You can also use "$(window).load(function() {"
 			    $(function () {
@@ -107,7 +108,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			    <div  id="top" class="callbacks_container">
 			      <ul class="rslides" id="slider4">
 			        <li>
-			          <img src="src/images/slide.jpg" alt="">
+			          <img src="dist/images/slide.jpg" alt="">
 			          <div class="caption text-center">
 			          	<div class="slide-text-info">
 			          		<h1>Introducing <span>Umbrella.</span></h1>
@@ -128,7 +129,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			          </div>
 			        </li>
 			        <li>
-			          <img src="src/images/slide.jpg" alt="">
+			          <img src="dist/images/slide.jpg" alt="">
 			          <div class="caption text-center">
 			          	<div class="slide-text-info">
 			          		<h1>Introducing <span>Amazing app.</span></h1>
@@ -149,7 +150,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			          </div>
 			        </li>
 			        <li>
-			          <img src="src/images/slide.jpg" alt="">
+			          <img src="dist/images/slide.jpg" alt="">
 			          <div class="caption text-center">
 			          	<div class="slide-text-info">
 			          		<h1>Introducing <span>Best app.</span></h1>
@@ -170,7 +171,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			          </div>
 			        </li>
 			        <li>
-			          <img src="src/images/slide.jpg" alt="">
+			          <img src="dist/images/slide.jpg" alt="">
 			           <div class="caption text-center">
 			           <div class="slide-text-info">
 			          		<h1>Introducing <span>Amazing app.</span></h1>
@@ -195,7 +196,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			    <div class="clearfix"> </div>
 			    <!-----divice----->
 			    	<div class="divice-demo">
-			    		<img src="src/images/divice-in-hand.png" title="demo" />
+			    		<img src="dist/images/divice-in-hand.png" title="demo" />
 			    	</div>
 			    <!---//divice----->
 			<!----- //End-slider---->
@@ -245,7 +246,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div><!---end-features-grid---->
 						<div class="col-md-4 features-grid">
 							<div class="big-divice">
-								<img src="src/images/divice.png" title="features-demo" />
+								<img src="dist/images/divice.png" title="features-demo" />
 							</div>
 						</div><!---end-features-grid---->
 						<div class="col-md-4 features-grid">
@@ -297,8 +298,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<!----sreen-gallery-cursual---->
 						<div class="sreen-gallery-cursual">
 							 <!-- requried-jsfiles-for owl -->
-							<link href="src/css/owl.carousel.css" rel="stylesheet">
-							    <script src="src/js/owl.carousel.js"></script>
+							<link href="dist/css/owl.carousel.css" rel="stylesheet">
+							    <script src="dist/js/owl.carousel.js"></script>
 							        <script>
 							    $(document).ready(function() {
 							      $("#owl-demo").owlCarousel({
@@ -313,28 +314,28 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							 <div class="container">
 						       <div id="owl-demo" class="owl-carousel">
 					                <div class="item">
-					                	<img class="lazyOwl" data-src="src/images/screen.png" alt="screen-name">
+					                	<img class="lazyOwl" data-src="dist/images/screen.png" alt="screen-name">
 					                </div>
 					                <div class="item">
-					                	<img class="lazyOwl" data-src="src/images/screen.png" alt="screen-name">
+					                	<img class="lazyOwl" data-src="dist/images/screen.png" alt="screen-name">
 					                </div>
 					                <div class="item">
-					                	<img class="lazyOwl" data-src="src/images/screen.png" alt="screen-name">
+					                	<img class="lazyOwl" data-src="dist/images/screen.png" alt="screen-name">
 					                </div>
 					                <div class="item">
-					                	<img class="lazyOwl" data-src="src/images/screen.png" alt="screen-name">
+					                	<img class="lazyOwl" data-src="dist/images/screen.png" alt="screen-name">
 					                </div>
 					                <div class="item">
-					                	<img class="lazyOwl" data-src="src/images/screen.png" alt="screen-name">
+					                	<img class="lazyOwl" data-src="dist/images/screen.png" alt="screen-name">
 					                </div>
 					                <div class="item">
-					                	<img class="lazyOwl" data-src="src/images/screen.png" alt="screen-name">
+					                	<img class="lazyOwl" data-src="dist/images/screen.png" alt="screen-name">
 					                </div>
 					                <div class="item">
-					                	<img class="lazyOwl" data-src="src/images/screen.png" alt="screen-name">
+					                	<img class="lazyOwl" data-src="dist/images/screen.png" alt="screen-name">
 					                </div>
 					                <div class="item">
-					                	<img class="lazyOwl" data-src="src/images/screen.png" alt="screen-name">
+					                	<img class="lazyOwl" data-src="dist/images/screen.png" alt="screen-name">
 					                </div>
 				              </div>
 						</div>
@@ -344,8 +345,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<!--//screen-shot-gallery---->
 				<!---- show-reel ---->
 				<!---pop-up-box---->
-					<link href="src/css/popuo-box.css" rel="stylesheet" type="text/css" media="all"/>
-					<script src="src/js/jquery.magnific-popup.js" type="text/javascript"></script>
+					<link href="dist/css/popuo-box.css" rel="stylesheet" type="text/css" media="all"/>
+					<script src="dist/js/jquery.magnific-popup.js" type="text/javascript"></script>
 					<!---//pop-up-box---->
 				<div class="show-reel text-center">
 					<div class="container">
@@ -385,7 +386,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="container">
 							<div class="col-md-3 team-member">
 								<div class="team-member-info">
-									<img class="member-pic" src="src/images/team-member4.jpg" title="name" />
+									<img class="member-pic" src="dist/images/team-member4.jpg" title="name" />
 									<h5><a href="#">Jonh Doe eh</a></h5>
 									<span>Lead Designer</span>
 									<label class="team-member-caption text-center">
@@ -401,7 +402,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div><!--- end-team-member --->
 							<div class="col-md-3 team-member">
 								<div class="team-member-info">
-									<img class="member-pic" src="src/images/team-member1.jpg" title="name" />
+									<img class="member-pic" src="dist/images/team-member1.jpg" title="name" />
 									<h5><a href="#">Amanda Fenrnicas</a></h5>
 									<span>Lead Developer</span>
 									<label class="team-member-caption text-center">
@@ -417,7 +418,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div><!--- end-team-member --->
 							<div class="col-md-3 team-member">
 								<div class="team-member-info">
-									<img class="member-pic" src="src/images/team-member2.jpg" title="name" />
+									<img class="member-pic" src="dist/images/team-member2.jpg" title="name" />
 									<h5><a href="#">Hamberg Rodny</a></h5>
 									<span>Artist</span>
 									<label class="team-member-caption text-center">
@@ -433,7 +434,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div><!--- end-team-member --->
 							<div class="col-md-3 team-member">
 								<div class="team-member-info">
-									<img class="member-pic" src="src/images/team-member3.jpg" title="name" />
+									<img class="member-pic" src="dist/images/team-member3.jpg" title="name" />
 									<h5><a href="#">Jessica Leonardo</a></h5>
 									<span>Photographer</span>
 									<label class="team-member-caption text-center">
@@ -458,7 +459,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<!----people-says----->
 					<div class="test-monials text-center">
 						<div class="container">
-							<span><img src="src/images/icon1.png" title="quit"/></span>
+							<span><img src="dist/images/icon1.png" title="quit"/></span>
 						<script>
 							    $(document).ready(function() {
 							      $("#owl-demo1").owlCarousel({
@@ -473,7 +474,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					       <div class="item">
 					          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
 					     		<div class="quit-people">
-					     			<img src="src/images/quit-people.jpg" title="name" />
+					     			<img src="dist/images/quit-people.jpg" title="name" />
 					     			<h4><a href="#"> Robert Leonaro</a></h4>
 					     			<span>CEO at CUBEDES</span>
 					     		</div>
@@ -481,7 +482,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					        <div class="item">
 					          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
 					     		<div class="quit-people">
-					     			<img src="src/images/quit-people.jpg" title="name" />
+					     			<img src="dist/images/quit-people.jpg" title="name" />
 					     			<h4><a href="#"> Robert Leonaro</a></h4>
 					     			<span>CEO at CUBEDES</span>
 					     		</div>
@@ -489,7 +490,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					        <div class="item">
 					          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
 					     		<div class="quit-people">
-					     			<img src="src/images/quit-people.jpg" title="name" />
+					     			<img src="dist/images/quit-people.jpg" title="name" />
 					     			<h4><a href="#"> Robert Leonaro</a></h4>
 					     			<span>CEO at CUBEDES</span>
 					     		</div>
@@ -515,49 +516,49 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						 </script>
 						<div id="owl-demo2" class="owl-carousel">
 					       <div class="item">
-					       		<img src="src/images/brand-logo1.png" title="the verge" />
+					       		<img src="dist/images/brand-logo1.png" title="the verge" />
 					       </div>
 					       <div class="item">
-					       		<img src="src/images/brand-logo2.png" title="Mashable" />
+					       		<img src="dist/images/brand-logo2.png" title="Mashable" />
 					       </div>
 					       <div class="item">
-					       		<img src="src/images/brand-logo3.png" title="TNW" />
+					       		<img src="dist/images/brand-logo3.png" title="TNW" />
 					       </div>
 					       <div class="item">
-					       		<img src="src/images/brand-logo4.png" title="bribble" />
+					       		<img src="dist/images/brand-logo4.png" title="bribble" />
 					       </div>
 					       <div class="item">
-					       		<img src="src/images/brand-logo1.png" title="the verge" />
+					       		<img src="dist/images/brand-logo1.png" title="the verge" />
 					       </div>
 					       <div class="item">
-					       		<img src="src/images/brand-logo1.png" title="the verge" />
+					       		<img src="dist/images/brand-logo1.png" title="the verge" />
 					       </div>
 					       <div class="item">
-					       		<img src="src/images/brand-logo2.png" title="Mashable" />
+					       		<img src="dist/images/brand-logo2.png" title="Mashable" />
 					       </div>
 					       <div class="item">
-					       		<img src="src/images/brand-logo3.png" title="TNW" />
+					       		<img src="dist/images/brand-logo3.png" title="TNW" />
 					       </div>
 					       <div class="item">
-					       		<img src="src/images/brand-logo4.png" title="bribble" />
+					       		<img src="dist/images/brand-logo4.png" title="bribble" />
 					       </div>
 					       <div class="item">
-					       		<img src="src/images/brand-logo1.png" title="the verge" />
+					       		<img src="dist/images/brand-logo1.png" title="the verge" />
 					       </div>
 					       <div class="item">
-					       		<img src="src/images/brand-logo1.png" title="the verge" />
+					       		<img src="dist/images/brand-logo1.png" title="the verge" />
 					       </div>
 					       <div class="item">
-					       		<img src="src/images/brand-logo2.png" title="Mashable" />
+					       		<img src="dist/images/brand-logo2.png" title="Mashable" />
 					       </div>
 					       <div class="item">
-					       		<img src="src/images/brand-logo3.png" title="TNW" />
+					       		<img src="dist/images/brand-logo3.png" title="TNW" />
 					       </div>
 					       <div class="item">
-					       		<img src="src/images/brand-logo4.png" title="bribble" />
+					       		<img src="dist/images/brand-logo4.png" title="bribble" />
 					       </div>
 					       <div class="item">
-					       		<img src="src/images/brand-logo1.png" title="the verge" />
+					       		<img src="dist/images/brand-logo1.png" title="the verge" />
 					       </div>
 						</div>
 			</div>
@@ -591,18 +592,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="col-md-2 getintouch-left">
 						<div class="footer-divice">
-							<img src="src/images/divice-half.png" title="getintouch" />
+							<img src="dist/images/divice-half.png" title="getintouch" />
 						</div>
 					</div>	
 				</div>
 			</div>
-			<!---//getintouch----->
-			<!-----footer----->
 			<div class="footer">
 				<div class="container">
 					<div class="footer-grids">
 						<div class="col-md-3 footer-grid about-info">
-							<a href="#"><img src="src/images/logo.png" title="Umbrella" /></a>
+							<a href="#"><img src="dist/images/logo.png" title="Umbrella" /></a>
 							<p>eusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 						</div>
 						<div class="col-md-3 footer-grid subscribe">
@@ -653,8 +652,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 				</div>
 			</div>
-			<!---//footer----->
-			
+			<script type="text/javascript" src="dist/js/all.js"></script>
 	</body>
 </html>
 
